--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
  # flickr           :
  # facebook         :
  # foursquare       :
- # github           : "pengluomath"
+  github           : "pengluomath"
  # google_plus      :
  # keybase          :
  # instagram        :
